--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # title: "EV myths"
 author: "Dean Turpin"
 
-theme: jekyll-theme-merlot
+theme: jekyll-theme-slate
 
 # Markdown settings
 markdown: kramdown
