--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
-# title: "EV myths"
+title: "EV myths"
+description: "... and tall tales"
 author: "Dean Turpin"
 
 theme: jekyll-theme-slate
 
 # Markdown settings
-markdown: kramdown
-kramdown:
-  input: GFM
+# markdown: kramdown
+# kramdown:
+#   input: GFM
